--- a/passes-management/package.json
+++ b/passes-management/package.json
@@ -16,7 +16,9 @@
     "angular-route": "^1.4.3",
     "boom": "^2.8.0",
     "jquery": "^1.11.3",
-    "lodash": "^3.10.0"
+    "lodash": "^3.10.0",
+    "mongoose": "^4.1.0",
+    "underscore.deferred": "^0.4.0"
   },
   "devDependencies": {
     "brfs": "^1.4.0",
