--- a/passes-management/package.json
+++ b/passes-management/package.json
@@ -18,6 +18,8 @@
     "jquery": "^1.11.3",
     "lodash": "^3.10.0",
     "mongoose": "^4.1.0",
+    "pdfkit": "^0.7.1",
+    "qr-image": "^3.1.0",
     "underscore.deferred": "^0.4.0"
   },
   "devDependencies": {
