--- a/passes-management/package.json
+++ b/passes-management/package.json
@@ -15,14 +15,19 @@
     "angular": "^1.4.3",
     "angular-route": "^1.4.3",
     "boom": "^2.8.0",
+    "handlebars": "^3.0.3",
     "jquery": "^1.11.3",
     "lodash": "^3.10.0",
     "mongoose": "^4.1.0",
+    "nodemailer": "^1.4.0",
+    "nodemailer-smtp-transport": "^1.0.3",
+    "nodemailer-wellknown": "^0.1.6",
     "pdfkit": "^0.7.1",
     "qr-image": "^3.1.0",
     "underscore.deferred": "^0.4.0"
   },
   "devDependencies": {
+    "assert": "^1.3.0",
     "brfs": "^1.4.0",
     "browserify": "^11.0.0",
     "del": "^1.2.0",
@@ -32,9 +37,11 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.0",
+    "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
+    "mocha": "^2.2.5",
     "through2": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
